--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
-    "module-alias": "^2.2.3"
+    "module-alias": "^2.2.3",
+    "pg": "^8.16.3",
+    "sutando": "^1.7.2"
   },
   "_moduleAliases": {
     "@controllers": "src/controllers",
     "@exceptions": "src/exceptions",
     "@middlewares": "src/middlewares",
+    "@models": "./src/models",
     "@requests": "src/requests",
     "@resources": "src/resources"
   }
