--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "module-alias": "^2.2.3",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.14.2",
     "pg": "^8.16.3",
+    "sqlite3": "^5.1.7",
     "sutando": "^1.7.2"
   },
   "_moduleAliases": {
