--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@ DB_PASSWORD=
 DB_DATABASE=
 DB_PORT=
 DB_PGSSL=false
+
+RABBITMQ_URL=
+RABBITMQ_HOST=
+RABBITMQ_USER=
+RABBITMQ_PASS=
+RABBITMQ_PORT=
+RABBITMQ_VHOST=
