--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "node-cron": "^4.2.1",
     "pg": "^8.16.3",
     "sqlite3": "^5.1.7",
-    "sutando": "^1.7.2"
+    "sutando": "^1.7.2",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "_moduleAliases": {
     "@config": "config",
