added docker and change sutando to prisma

--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,4 @@ APP_ENV=local
 APP_PORT=3000
 TZ=UTC
 
-DB_CONNECTION=
-DB_HOST=
-DB_USER=
-DB_PASSWORD=
-DB_DATABASE=
-DB_PORT=
-DB_PGSSL=false
-
-RABBITMQ_URL=
-RABBITMQ_HOST=
-RABBITMQ_USER=
-RABBITMQ_PASS=
-RABBITMQ_PORT=
-RABBITMQ_VHOST=
+DATABASE_URL=
